--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
-img {
-  max-width: 100%;
-  display: block;
-  height: auto;
-  margin: 0 auto;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
+
+#title{
+  font-family: 'Montserrat', sans-serif;
 }
 
-#img-div{
+#main{
   text-align: center;
+  font-family: 'Roboto', sans-serif;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
