--- a/style.css
+++ b/style.css
@@ -1,17 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Roboto&display=swap');
 
 #title{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Merriweather', serif;
+  margin-bottom: 0px;
+  margin-top: 10px;
+}
+
+#subtitle{
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+
+#heading{
+  background-color: #bdbdbd;
+  border:3px solid black;
+  border-radius: 10px;
 }
 
 #main{
   text-align: center;
   font-family: 'Roboto', sans-serif;
+  background-color: #eeeeee;
 }
 
 img {
-  max-width: 100%;
+  max-width: 50%;
   height: auto;
   display: block;
   margin: 0 auto;
+  border:20px solid white;
+  margin-top: 3%;
+  margin-bottom: 1%;
 }
