--- a/style.css
+++ b/style.css
@@ -15,20 +15,33 @@
   background-color: #bdbdbd;
   border:3px solid black;
   border-radius: 10px;
+  margin-bottom: 3%;
 }
 
 #main{
   text-align: center;
   font-family: 'Roboto', sans-serif;
-  background-color: #eeeeee;
+  background-color: #eeeeee
 }
 
 img {
   max-width: 50%;
   height: auto;
   display: block;
-  margin: 0 auto;
+  margin: 0px auto;
   border:20px solid white;
-  margin-top: 3%;
-  margin-bottom: 1%;
+}
+
+#img-caption{
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+#img-div{
+  margin: 3% 0px 3%;
+}
+
+#info-div{
+  margin-left: 10%;
+  margin-right: 10%;
 }
